--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <form action="index.php" method="post" >
                     <div class="row">
                         <div class="form-group col-lg-3 input-group">
-                            <input type="text" id="uid1" class="form-control col-lg-2" value="DSOYSWIMM" disabled /> 
+                            <input type="text" id="uid1" class="form-control col-lg-2" value="DSOYSWIMM-" disabled /> 
                             <input type="text" id="uid2" class="form-control col-lg-2" onblur="uidMix()" maxlength="6" required />  
                             <input type="hidden" id="uid" name="uid" class="form-control form-control-lg" /> 
                         </div>
