--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-                <form action="index.php" method="post" >
+                <form action="index_data.php" method="post" >
                     <div class="row">
                         <div class="form-group col-lg-3 input-group">
                             <input type="text" id="uid1" class="form-control col-lg-2" value="DSOYSWIMM-" disabled /> 
