--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <div class="dropdown-menu" aria-labelledby="adminDropdown">
                         <a class="dropdown-item" href="admin/show_data.php">Show Data</a>
                         <a class="dropdown-item" href="admin/search_data.php">Search Data</a>
+                        <a class="dropdown-item" href="batches_timing_details.php">Admission details</a>
                     </div>
                 </li>
             </ul>
